# ire

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: risk.py
app/core/: config.py  ineligibility.py  interfaces.py  risk_score.py
app/schemas/: __init__.py  risk_profile.py  user_profile.py
app/services/: risk.py
ire/: main.py
ire/api/v1/: routes.py
ire/api/v1/endpoints/: risk.py
ire/core/: config.py  ineligibility.py  interfaces.py  risk_score.py  utils.py
ire/schemas/: __init__.py  user_profile.py
ire/services/: risk.py
tests/: conftest.py
tests/functional/api/v1/: test_risk.py
tests/unit/core/: test_ineligibility.py  test_risk_score.py
tests/unit/schemas/: test_user_profile.py
