[tool.poetry]
name = "ire"
version = "0.1.0"
description = ""
authors = ["Caio Lopes <caiodesalopes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "20.8b1"
flake8-bugbear = "^20.1.4"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
